# stik-server

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  manage.py  pyproject.toml  run-debug.sh  run.sh  tmanage.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yaml  docker-test.yaml  pages.yaml  quality.yaml
bridge/: admin.py  apps.py  basemodels.py  channel.py  conn.py  decorators.py  enums.py  filters.py  inputs.py  models.py  scalars.py  signals.py  types.py  urls.py
bridge/migrations/: 0001_initial.py
bridge/mutations/: __init__.py  create_project.py  notion_workspace.py
bridge/queries/: __init__.py  database.py  me.py
stik_server/: asgi.py  schema.py  settings.py  settings_test.py  urls.py  wsgi.py
templates/graphene/: graphiql.html
